block page without transaction list

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -18,6 +18,14 @@
           integrity="sha512-kDmbIQZ10fxeKP5NSt3+tz77HO42IJiS+YPIirOIKTdokl4LtuXYo3NNvq9mTAF+rzdV1plp0sm9E6nvtVpnFQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <style>
+
+        .content {
+            max-width: 1280px;
+            margin: auto;
+            padding: 8px;
+            font-size: 0.875rem;
+        }
+
         .footer-container {
             padding: 0 8px;
         }
@@ -27,10 +35,66 @@
             margin: auto;
             padding: 8px;
         }
+
+        #search {
+            width: 100%;
+        }
+
+        .menubar {
+            max-width: 1280px;
+            flex: 1 1 auto;
+            margin: auto;
+            display: flex;
+            padding: 0 8px;
+        }
+
+        .top-bar-right {
+            width: 30%;
+        }
+
+        .menu .menu-text {
+            padding-left: 0;
+        }
+
+        .top-bar input {
+            max-width: 100%;
+        }
+
+        .input-group {
+            margin-bottom: 0;
+        }
+
+        .mono {
+            font-family: monospace;
+        }
     </style>
     {% block head %}{% endblock %}
 </head>
 <body>
+
+<div class="top-bar">
+    <div class="menubar">
+        <div class="top-bar-left">
+            <ul class="menu">
+                <li class="menu-text">Haruka's Aleo Explorer</li>
+                <li><a href="/">Home</a></li>
+            </ul>
+        </div>
+        <div class="top-bar-right">
+            <ul class="menu">
+                <!--suppress HtmlUnknownTag -->
+                <form id="search" action="/search">
+                    <div class="input-group">
+                        <input class="input-group-field" type="search" name="q" placeholder="Search">
+                        <div class="input-group-button">
+                            <button type="submit" class="button">Search</button>
+                        </div>
+                    </div>
+                </form>
+            </ul>
+        </div>
+    </div>
+</div>
 {% block content %}{% endblock %}
 <div class="footer-container">
     <div class="footer">
