fix some formatting

--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -116,8 +116,8 @@
                     {% if ledger_root %}
                         <span class="mono">{{ ledger_root }}</span>
                     {% else %}
-                        Unknown<span data-tooltip
-                                     title="This explorer is not actively calculating the ledger root for every possible block due to various reasons.">?</span>
+                        Unknown&nbsp;<span data-tooltip
+                                           title="This explorer is not actively calculating the ledger root for every possible block due to various reasons.">?</span>
                     {% endif %}
                 </div>
             </div>
