--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -89,7 +89,7 @@
                         <td>{{ block.timestamp }}</td>
                         <td>{{ block.transactions }}</td>
                         <td>{{ block.transitions }}</td>
-                        <td class="mono"><a href="/address?q={{ block.owner }}">{{ block.owner }}</a></td>
+                        <td class="mono"><a href="/address?a={{ block.owner }}">{{ block.owner }}</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
