--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -62,8 +62,7 @@
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Block Weight <span data-tooltip
-                                                                               title="(2 ^ 64 - 1) / difficulty_target"><i
-                                class="fi-info"></i></span></div>
+                                title="(2 ^ 64 - 1) / difficulty_target"><i class="fi-info"></i></span></div>
                         <div class="cell auto ticker-cell-data">{{ (2 ** 64 - 1) / latest_block.header.metadata.difficulty_target }}</div>
                     </div>
                 </div>
