--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -49,7 +49,7 @@
         }
 
         .top-bar-right {
-            width: 30%;
+            width: 50%;
         }
 
         .menu .menu-text {
@@ -85,7 +85,8 @@
                 <!--suppress HtmlUnknownTag -->
                 <form id="search" action="/search">
                     <div class="input-group">
-                        <input class="input-group-field" type="search" name="q" placeholder="Search">
+                        <input class="input-group-field" type="search" name="q"
+                                placeholder="Search (block height, object id, object id prefix)">
                         <div class="input-group-button">
                             <button type="submit" class="button">Search</button>
                         </div>
