--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -254,8 +254,7 @@
                                 Recipient
                             </div>
                             <div class="cell auto data-line-value">
-                                <span class="mono"><a
-                                        href="/address?a={{ operation.recipient }}">{{ operation.recipient }}</a></span>
+                                <span class="mono"><a href="/address?a={{ operation.recipient }}">{{ operation.recipient }}</a></span>
                             </div>
                         </div>
                         <div class="data-line grid-x grid-padding-x">
@@ -280,8 +279,7 @@
                                 Caller
                             </div>
                             <div class="cell auto data-line-value">
-                                <span class="mono"><a
-                                        href="/address?a={{ operation.caller }}">{{ operation.caller }}</a></span>
+                                <span class="mono"><a href="/address?a={{ operation.caller }}">{{ operation.caller }}</a></span>
                             </div>
                         </div>
                         <div class="data-line grid-x grid-padding-x">
@@ -289,8 +287,7 @@
                                 Recipient
                             </div>
                             <div class="cell auto data-line-value">
-                                <span class="mono"><a
-                                        href="/address?a={{ operation.recipient }}">{{ operation.recipient }}</a></span>
+                                <span class="mono"><a href="/address?a={{ operation.recipient }}">{{ operation.recipient }}</a></span>
                             </div>
                         </div>
                         <div class="data-line grid-x grid-padding-x">
@@ -331,8 +328,7 @@
                                 Caller
                             </div>
                             <div class="cell auto data-line-value">
-                                <span class="mono"><a
-                                        href="/address?a={{ operation.function_inputs.caller }}">{{ operation.function_inputs.caller }}</a></span>
+                                <span class="mono"><a href="/address?a={{ operation.function_inputs.caller }}">{{ operation.function_inputs.caller }}</a></span>
                             </div>
                         </div>
                         <div class="data-line grid-x grid-padding-x">
@@ -340,8 +336,7 @@
                                 Recipient
                             </div>
                             <div class="cell auto data-line-value">
-                                <span class="mono"><a
-                                        href="/address?a={{ operation.function_inputs.recipient }}">{{ operation.function_inputs.recipient }}</a></span>
+                                <span class="mono"><a href="/address?a={{ operation.function_inputs.recipient }}">{{ operation.function_inputs.recipient }}</a></span>
                             </div>
                         </div>
                         <div class="data-line grid-x grid-padding-x">
