--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -51,8 +51,7 @@
                     {% if is_canonical %}
                         <a href="/block?h={{ block.header.metadata.height }}">{{ block.header.metadata.height }}</a> ({{ confirmations }} confirmations)
                     {% else %}
-                        <span class="mono"><a
-                                href="/block?bh={{ block.block_hash }}">{{ block.block_hash }}</a></span> (
+                        <span class="mono"><a href="/block?bh={{ block.block_hash }}">{{ block.block_hash }}</a></span> (
                         <span class="text-alert">Non-canonical block</span>)
                     {% endif %}
                 </div>
@@ -88,8 +87,8 @@
                 <tbody>
                 {% for transition in transaction.transitions %}
                     <tr>
-                        <td><span class="mono"><a
-                                href="/transition?id={{ transition.transition_id }}">{{ transition.transition_id }}</a></span>
+                        <td>
+                            <span class="mono"><a href="/transition?id={{ transition.transition_id }}">{{ transition.transition_id }}</a></span>
                         </td>
                         <td>{{ "%.6f" % transition.value_balance.credit() }}</td>
                         <td>{{ transition.events | length }}</td>
