--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -78,6 +78,7 @@
             <ul class="menu">
                 <li class="menu-text">Haruka's Aleo Explorer</li>
                 <li><a href="/">Home</a></li>
+                <li><a href="/nodes">Nodes</a></li>
             </ul>
         </div>
         <div class="top-bar-right">
