add relative time on node page and disable cache

--- a/webui/templates/nodes.jinja2
+++ b/webui/templates/nodes.jinja2
@@ -27,7 +27,7 @@
                 <th>Status</th>
                 <th>Height</th>
                 <th>Cumulative weight</th>
-                <th>Last seen</th>
+                <th>Last update</th>
             </tr>
             </thead>
             <tbody>
