slightly change wording as it's the live state, not historical data

--- a/webui/templates/nodes.jinja2
+++ b/webui/templates/nodes.jinja2
@@ -15,7 +15,7 @@
     <div class="content">
 
         <div class="header">
-            <h3>Known nodes: {{ nodes | length }}</h3>
+            <h3>Connected nodes: {{ nodes | length }}</h3>
             <em>Note: only contains nodes that accept incoming connections</em>
         </div>
 
