--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <title>{% block title %}{% endblock %}</title>
     {#    <style>#}
     {#        body {#}
